- adapted webyast-time-ui

--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -1,20 +1,20 @@
 <!--
 # Copyright (c) 2009-2010 Novell, Inc.
-# 
+#
 # All Rights Reserved.
-# 
+#
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of version 2 of the GNU General Public License
 # as published by the Free Software Foundation.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, contact Novell, Inc.
-# 
+#
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
@@ -33,10 +33,10 @@
 		padding-left:.5em;
 		vertical-align:middle;
 	 }
-	 label.valid { 
+	 label.valid {
 		background: url('../images/checked.gif') no-repeat;
 		padding:0px 0px 0px 18px;
-		vertical-align:middle; 
+		vertical-align:middle;
 		margin-left:5px;
 	 }
   </style>
@@ -46,19 +46,19 @@
       $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
     });
   <% end -%>
-  
+
   <% if JSMIN == false %>
     <%= javascript_include_tag "validation.js" %>
-    
+
   <% end %>
-  
+
   <script type="text/javascript">
 	 $(document).ready(function() {
 		validateDomainName("ntp_server");
 		validateTime("currenttime");
 
-		$("#timeForm").validate({ 
-		  onkeyup: function(element) { this.element(element); }, 
+		$("#timeForm").validate({
+		  onkeyup: function(element) { this.element(element); },
 		  rules:{
 			 ntp_server: {
 				required: "#ntp_sync:checked",
@@ -141,77 +141,115 @@
   <% end -%>
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%><span id="questionMark">?</span></div>
+<!--<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%><span id="questionMark">?</span></div> -->
 
-<div class="plugin-content">
-<%= render :partial => 'shared/missing_write_permissions' if disabled %>
-  <!--<#%# form_tag '/time/update', {:id => "timeForm", :class => 'container', :onsubmit => "return submitTime();"} do #%#>-->
-	 <% form_tag '/time/update', {:id => "timeForm", :class => 'container', :onsubmit => "return submitTime();"} do %>
-    <%#TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>%>
-  <fieldset class="small-fields small-labels">
-    <legend><span><%= _("Timezone")%></span></legend>
-    <p>
-      <label for="region"><%=_("Region")%></label> 
-      <!-- 300px is good enough for all our region and time zone names -->
-      <%= select_tag "region", options_for_select(@stime.regions, @stime.region.name), :disabled => disabled, :style => "width: 300px;" %>
-    </p>
-    <p>
-      <label for="timezone"><%=_("Timezone")%></label>
-      <span id="timezones">
-        <%= render(:partial => 'timezones',
-          :locals => {:region => @stime.region, :default => @stime.timezone,
-          :disabled => disabled})  %>
-      </span>
-    </p>
-    <% if @stime.respond_to?(:utcstatus) && !@stime.utcstatus.nil? %>
-    <%# I can't get this cobe-ing checkbox line up with the rest of the fields otherwise, grr
-        4em, because labels are 5em wide | -bubli
-    %>
-    <p>
-      <label><%=_("Hardware clock is set to UTC")%></label>
-      <%# don't use check_box helper as it generate also hidden opposite value %>
-      <input type="checkbox" name="utc" id="utc" value="true" 
-        <%=  "checked=\"checked\"" if @stime.utcstatus %>
-        <%=  "disabled=\"disabled\"" if disabled %> />
-    </p>
-    <% end %>
-  </fieldset>
-  <fieldset class="small-fields small-labels">
-    <legend><span><%= _("Time")%></span></legend>
-    <p>
-      <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"     
-        <%= "disabled=\"disabled\"" if disabled%>
-        <%= "checked=\"checked\"" unless ntp_available %>/>
-      <%=_("Manually configure time")%>
-    </p>
-    <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
-       %>
-    <p>
-      <label for="date_date"><%= _("Date") %></label>
-      <%= text_field "date","date", :disabled=> ntp_available ? true :false , :value => @stime.date %>
-    </p>
-    <p>
-      <label for="currenttime"><%= _("Time") %></label>
-      <%= text_field_tag "currenttime", @stime.time, :disabled=> ntp_available ? true :false %>
-    </p>
-    <p>
-      <input id="ntp_sync" type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"
-        <%=  "disabled=\"disabled\"" if disabled || !ntp_available %>
-        <%=  "checked=\"checked\"" if ntp_available %> />
-      <%=_("Synchronize via Network Time Protocol (NTP)")%>
-    </p>
-    <% if ntp_available %>
-    <p>
-      <label for="ntp_server"><%= _("NTP server") %></label>
-        <%= options = {}
-            options[:disabled] = "disabled" unless Ntp.permissions[:setserver]
-            text_field_tag("ntp_server", @ntp.actions.ntp_server || "", options={:class=>"ntp_server"})  %>
-    </p>
-    <% end %>
-  </fieldset>
-  <div class="nav-buttons">
-    <%= form_send_buttons :id=>"timeSubmit", :disabled => disabled, :class => "button" %>
-  </div>
+<div class="plugin-content plugin-border">
+  <%= render :partial => 'shared/missing_write_permissions' if disabled %>
+
+	 <% form_tag '/time/update', {:id => "timeForm", :class=>"webyast_form", :onsubmit => "return submitTime();"} do %>
+    <div class="plugin-header">
+      <div class="left">
+        <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/time.png"></label>
+        <label class="plugin-name"><%=_("Time")%></label>
+     	</div>
+
+      <div class="right" >
+        <span id="questionMark" style="margin:0px 15px; float:none;">?</span>
+      </div>
+     	<div class="clearfix"></div>
+    </div>
+
+    <div class="clearfix">&nbsp;</div>
+
+    <fieldset class="webyast_fieldset">
+      <div class="fieldset_header">
+	      <span class="fieldset_header_title" ><%= _("Timezone")%></span>
+	    </div>
+
+	    <div class="fieldset_body">
+	      <div class="row">
+          <label for="region"><%=_("Region")%></label>
+          <%= select_tag "region", options_for_select(@stime.regions, @stime.region.name), :disabled => disabled %>
+  	    </div>
+
+ 	      <div class="row">
+          <label for="timezone"><%=_("Timezone")%></label>
+          <span id="timezones">
+            <%= render(:partial => 'timezones', :locals => {:region => @stime.region, :default => @stime.timezone, :disabled => disabled})  %>
+          </span>
+        </div>
+
+        <% if @stime.respond_to?(:utcstatus) && !@stime.utcstatus.nil? %>
+          <%# I can't get this cobe-ing checkbox line up with the rest of the fields otherwise, grr
+              4em, because labels are 5em wide | -bubli
+          %>
+        <div class="row">
+          <label><%=_("Hardware clock is set to UTC")%></label>
+          <%# don't use check_box helper as it generate also hidden opposite value %>
+          <input type="checkbox" name="utc" id="utc" value="true" <%=  "checked=\"checked\"" if @stime.utcstatus %> <%=  "disabled=\"disabled\"" if disabled %> />
+        </div>
+        <% end %>
+      </div>
+    </fieldset>
+
+
+    <fieldset class="webyast_fieldset">
+      <div class="fieldset_header">
+	      <span class="fieldset_header_title" ><%= _("Time")%></span>
+	    </div>
+
+	    <div class="fieldset_body">
+        <fieldset class="time_filedset" >
+          <legend>
+            <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"
+              <%= "disabled=\"disabled\"" if disabled%>
+              <%= "checked=\"checked\"" unless ntp_available %>/>
+              <%=_("Manually configure time")%>
+          </legend>
+
+
+
+         <div class="row">
+           <label for="date_date"><%= _("Date") %></label>
+           <%= text_field "date","date", :disabled=> ntp_available ? true :false , :value => @stime.date %>
+         </div>
+
+         <div class="row">
+          <label for="currenttime"><%= _("Time") %></label>
+          <%= text_field_tag "currenttime", @stime.time, :disabled=> ntp_available ? true :false %>
+         </div>
+        </fieldset>
+
+      <fieldset class="time_filedset" >
+        <legend>
+          <input id="ntp_sync" type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"
+          <%=  "disabled=\"disabled\"" if disabled || !ntp_available %>
+          <%=  "checked=\"checked\"" if ntp_available %> />
+          <%=_("Synchronize via Network Time Protocol (NTP)")%>
+        </legend>
+
+        <% if ntp_available %>
+         <div class="row">
+          <label for="ntp_server"><%= _("NTP server") %></label>
+            <%= options = {}
+                options[:disabled] = "disabled" unless Ntp.permissions[:setserver]
+                text_field_tag("ntp_server", @ntp.actions.ntp_server || "", options={:class=>"ntp_server"})  %>
+         </div>
+        <% end %>
+      </fieldset>
+      <div class="clearfix"></div>
+     </div>
+    </fieldset>
+
+    <div class="clearfix"></div>
+
+    <div class="button_container">
+ 	    <div class="hr">&nbsp;</div>
+      <div class="nav-buttons" style="">
+        <%= form_send_buttons :id=>"timeSubmit", :disabled => disabled, :class => "button" %>
+      </div>
+    </div>
+
   <% end %>
 </div>
 
@@ -222,4 +260,3 @@
   :url => { :action => :timezones_for_region },
   :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
 
- 
