--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -675,11 +675,20 @@ div#browserWarning
   height: 30em
   background-color: white
   overflow: auto
-  border: 1px solid #999
+  border: 1px solid #ddd
+  padding: 5px 10px 5px 10px
+  margin: 5px 10px 5px 10px
   font-size: 1.1em
   font-family: courier, serif
 
 .eula_paragraph
   text-align: left
   padding-top: 5px
+
+.eula_fieldset
+  background: -moz-linear-gradient(center top , #FFF 0pt, #FCFCFC 100%) repeat scroll 0 0 transparent
+
+.eula_fieldset_body
+  padding: 10px 10px 10px 10px
+  background-color: #ffffff
 
