- fix wrong button size

--- a/webclient/public/stylesheets/webyast-administrator.css
+++ b/webclient/public/stylesheets/webyast-administrator.css
@@ -19,7 +19,7 @@
 #administrator_password { position:inherit; }
 #administrator_aliases, #administrator_submit { float: left; vertical-align:middle; }
 #administrator_aliases { padding: 2px 3px 3px 3px; }
-#administrator_submit { border-radius:0px; margin-left:-1px; }
+#administrator_submit { border-radius:0px; margin-left:-1px; 	padding:2px; 	line-height:16px; 	border-color:#c4c4c4; }
 
 
 div.password_container { position:relative; margin-bottom:6px; }
