- adapted webyast-software-ui - minor layout adaptation

--- a/plugins/software/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_summary.html.erb
@@ -134,6 +134,7 @@
 
     <% if update == false %>
       <div class="statusbar_row">
+        <img src="/images/checkmark.gif" class="checked_health">
         <%= _("Your system is up to date.") %> <!-- RORSCAN_ITL -->
       </div>
     <% end %>
