--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -79,7 +79,7 @@ div.statusbar_header label {
 
 #statusbar_status_container {
   float:left;
-  width:28%;
+  width:27%;
   margin:20px 0;
   padding:0px 5px 0px 20px;
   min-height:50px;
@@ -87,7 +87,7 @@ div.statusbar_header label {
 
 #statusbar_patches_container {
   float:left;
-  width:22%;
+  width:27%;
 
   padding:0px 5px;
 
@@ -100,7 +100,7 @@ div.statusbar_header label {
 
 #statusbar-actions {
   float:right;
-  width:18%;
+  width:16%;
   margin:20px 0;
   margin-right:10px;
   border:4px solid #eee;
@@ -159,4 +159,12 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 }
 
 #favorites { border-color: #eee; }
+
+.checked_health {
+	height:19px!important;
+	width:19px!important;
+	padding-right:6px;
+	margin:2px 1px 1px 2px;
+	vertical-align:middle;
+}
 
