--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -64,8 +64,8 @@ div.mpopup, div.mdialog {
   margin:0;
 }
 div.mpopup img {
-/*  height:48px;
-  width:48px; */
+  height:48px;
+  width:48px;
   margin-right:10px;
   vertical-align:middle;
   display:inline-block;
